--- a/sv-tora/package.json
+++ b/sv-tora/package.json
@@ -22,12 +22,14 @@
         "resolve-url-loader": "^3.1.0"
     },
     "dependencies": {
+        "@popperjs/core": "^2.5.4",
         "bootstrap": "^4.5.3",
         "embla-carousel": "^4.0.6",
         "jquery": "^3.5.1",
         "node-sass": "^4.14.1",
         "sass": "^1.27.0",
         "theaterjs": "^3.2.0",
-        "tilt.js": "^1.2.1"
+        "tilt.js": "^1.2.1",
+        "tippy.js": "^6.2.7"
     }
 }
