--- a/sv-tora/package.json
+++ b/sv-tora/package.json
@@ -26,6 +26,7 @@
         "bootstrap": "^4.5.3",
         "embla-carousel": "^4.0.6",
         "jquery": "^3.5.1",
+        "material-design-icons": "^3.0.1",
         "node-sass": "^4.14.1",
         "sass": "^1.27.0",
         "theaterjs": "^3.2.0",
