--- a/sv-tora/package.json
+++ b/sv-tora/package.json
@@ -29,6 +29,7 @@
         "material-design-icons": "^3.0.1",
         "node-sass": "^4.14.1",
         "sass": "^1.27.0",
+        "swiper": "^6.4.10",
         "theaterjs": "^3.2.0",
         "tilt.js": "^1.2.1",
         "tippy.js": "^6.2.7"
