--- a/sv-tora/package.json
+++ b/sv-tora/package.json
@@ -17,7 +17,8 @@
         "hot": "mix watch --hot",
         "prod": "npm run production",
         "production": "mix --production",
-        "webpack": "webpack"
+        "webpack_dev": "webpack --config webpack.dev.config.js",
+        "webpack_prod": "webpack --config webpack.prod.config.js"
     },
     "devDependencies": {
         "@babel/core": "^7.13.15",
