--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,6 +20,8 @@ jobs:
       # Here is the deployment action
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.development', '.env');"
+      - name: Install dependencies
+        run: npm install
       - name: Laravel Mix CSS Bundling
         run: npm run prod
       - name: Webpack JS Bundling
