--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Upload to FTP Server
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
-          server: ${{ secrets.SFTP_SERVER }}
-          username: ${{ secrets.SFTP_USERNAME }}
+          server: ssh.strato.de
+          username: weberlin-design.de
           password: ${{ secrets.SFTP_PASSWORD }}
           port: 22
           local-dir: "./sv-tora/"
-          server-dir: "./"
+          server-dir: "./SV-Tora/"
