--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Upload to FTP Server
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
-          server: sftp://ssh.strato.de/
+          server: ssh.strato.de
           port: 22
           username: weberlin-design.de
           password: ${{ secrets.SFTP_PASSWORD }}
