--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           server: ssh.strato.de
           port: 22
-          username: weberlin-design.de
+          username: weberlin-design.dejhgfhgjf
           password: ${{ secrets.SFTP_PASSWORD }}
           local-dir: "./sv-tora/"
           server-dir: "./SV-Tora/"
