--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,9 +28,9 @@ jobs:
       - name: Upload to FTP Server
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
-          server: ssh.strato.de
+          server: sftp://ssh.strato.de
           port: 22
-          username: weberlin-design.dejhgfhgjf
+          username: weberlin-design.de
           password: ${{ secrets.SFTP_PASSWORD }}
           local-dir: "./sv-tora/"
           server-dir: "./SV-Tora/"
