--- a/sv-tora/.env
+++ b/sv-tora/.env
@@ -1,5 +1,5 @@
 APP_NAME="SV-Tora CMS - Competition Management System"
-APP_ENV=development
+APP_ENV=local
 APP_KEY=base64:V6iCHwAvlYajiXccC6SwOb6ZP0B2Pghd9owGtG2horc=
 APP_DEBUG=true
 APP_URL=http://sv-tora.test
