--- a/sv-tora/composer.json
+++ b/sv-tora/composer.json
@@ -15,7 +15,8 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.3",
         "laravel/framework": "^8.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+      "ext-pdo": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.4.2",
