Finished registration via invitation that are authenticated with manually generated tokens

--- a/sv-tora/.env
+++ b/sv-tora/.env
@@ -1,4 +1,4 @@
-APP_NAME="SV-Tora CMS - Competition Management System"
+APP_NAME="SV Tora CMS - Competition Management System"
 APP_ENV=local
 APP_KEY=base64:V6iCHwAvlYajiXccC6SwOb6ZP0B2Pghd9owGtG2horc=
 APP_DEBUG=true
@@ -30,8 +30,8 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_ADDRESS="kontakt@sv-tora.de"
+MAIL_FROM_NAME="SV Tora Berlin e.V."
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
