--- a/sv-tora/.env.development
+++ b/sv-tora/.env.development
@@ -1,4 +1,4 @@
-APP_NAME="SV-Tora CMS - Competition Management System"
+APP_NAME="SV Tora CMS - Competition Management System"
 APP_ENV=local
 APP_KEY=base64:V6iCHwAvlYajiXccC6SwOb6ZP0B2Pghd9owGtG2horc=
 APP_DEBUG=true
