--- a/sv-tora/composer.json
+++ b/sv-tora/composer.json
@@ -10,13 +10,15 @@
     "require": {
         "php": "^8.0",
         "ext-json": "*",
+        "ext-pdo": "*",
         "doctrine/dbal": "^3.1",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.3",
         "laravel/framework": "^8.4",
         "laravel/tinker": "^2.0",
-      "ext-pdo": "*"
+        "mpdf/mpdf": "^8.0",
+        "phpoffice/phpspreadsheet": "^1.19"
     },
     "require-dev": {
         "facade/ignition": "^2.4.2",
