--- a/sv-tora/.env
+++ b/sv-tora/.env
@@ -30,7 +30,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="kontakt@sv-tora.de"
+MAIL_FROM_ADDRESS="popov@sv-tora.de"
 MAIL_FROM_NAME="SV Tora Berlin e.V."
 
 AWS_ACCESS_KEY_ID=
