--- a/sv-tora/.env.development
+++ b/sv-tora/.env.development
@@ -30,8 +30,8 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_ADDRESS="popov@sv-tora.de"
+MAIL_FROM_NAME="SV Tora Berlin e.V."
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
