--- a/sv-tora/composer.json
+++ b/sv-tora/composer.json
@@ -11,6 +11,8 @@
         "php": "^8.0",
         "ext-json": "*",
         "ext-pdo": "*",
+        "barryvdh/laravel-dompdf": "^1.0",
+        "clegginabox/pdf-merger": "dev-master",
         "doctrine/dbal": "^3.1",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
