Fix: Fixed allowance of permissions to user superuser

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ Production Deployment.txt
 production_config.txt
 sv-tora/laravel-worker.conf
 sv-tora/sv_tora_conf
+sv-tora/dev_sv_tora_conf
 
 /vendor/
 npm-debug.log
